include(cc_library)
include(cc_test)

include_directories(.)

add_subdirectory(batch)
add_subdirectory(block)
add_subdirectory(chat_template)
add_subdirectory(kv_cache)
add_subdirectory(model)
add_subdirectory(prefix_cache)
add_subdirectory(request)
add_subdirectory(sampling)
add_subdirectory(state_dict)
add_subdirectory(tokenizer)

cc_library(
  NAME 
    parallel_state
  HDRS
    $<$<BOOL:${USE_NPU}>:mapping_npu.h>
    $<$<BOOL:${USE_NPU}>:parallel_state.h>
    model_parallel.h
  SRCS
    $<$<BOOL:${USE_NPU}>:mapping_npu.cpp>
    $<$<BOOL:${USE_NPU}>:parallel_state.cpp>
    model_parallel.cpp
  DEPS
    :common
    torch
    glog::glog
)

if(USE_NPU)
  cc_test(
    NAME 
      mapping_npu_test
    SRCS
      mapping_npu_test.cpp
    DEPS
      parallel_state
      absl::synchronization
      absl::time
      GTest::gtest_main
  )
endif()

cc_library(
  NAME 
    model_loader
  HDRS
    hf_model_loader.h
    model_loader.h
  SRCS
    hf_model_loader.cpp
    model_loader.cpp
  DEPS
    :common
    :model
    :models
    $<$<BOOL:${USE_NPU}>:npu_layers>
    :tokenizer
    torch
)
