include(cc_binary)
include(cc_library)
include(cc_test)


cc_library(
  NAME
    kv_cache
  HDRS
    embedding_cache.h
    kv_cache.h
    kv_cache_event.h
    kv_cache_transfer.h
    $<$<BOOL:${USE_NPU}>:llm_data_dist_transfer.h>
    $<$<BOOL:${USE_NPU}>:spec_kv_cache_transfer.h>
    kv_cache_store.h
    hierarchy_kv_cache_transfer.h
  SRCS
    embedding_cache.cpp 
    kv_cache.cpp
    kv_cache_transfer.cpp
    $<$<BOOL:${USE_NPU}>:llm_data_dist_transfer.cpp>
    $<$<BOOL:${USE_NPU}>:spec_kv_cache_transfer.cpp>
    kv_cache_store.cpp
    hierarchy_kv_cache_transfer.cpp
    $<$<BOOL:${USE_NPU}>:mooncake_transfer_engine.cpp>
    $<$<BOOL:${USE_NPU}>:mooncake_kv_cache_transfer.cpp>
  DEPS
    :common
    $<$<BOOL:${USE_NPU}>:graph>
    glog::glog
    $<$<BOOL:${USE_NPU}>:llm_datadist>
    $<$<BOOL:${USE_NPU}>:c_sec>
    torch
    $<$<BOOL:${USE_NPU}>:torch_npu>
    mooncake_store
    :xtensor
    $<$<BOOL:${USE_NPU}>:platform_npu>
)

cc_test(
  NAME
    embedding_cache_test
  SRCS
    embedding_cache_test.cpp
  DEPS
    :kv_cache
    GTest::gtest_main
)
target_link_libraries(embedding_cache_test
                      PUBLIC
                      Python::Python
                      $<$<BOOL:${USE_NPU}>:ascendcl>
                      $<$<BOOL:${USE_NPU}>:hccl>
                      $<$<BOOL:${USE_NPU}>:c_sec>
                      $<$<BOOL:${USE_NPU}>:nnopbase>)
